--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^20.11.16"
   },
   "dependencies": {
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "zod": "^3.22.4"
   }
 }
